plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.capstone'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Swagger
	// http://localhost:8080/swagger-ui/index.html#/
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.6.0'

	// Redis
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.2.0'
	implementation 'org.springframework.session:spring-session-data-redis:3.1.1'

	// Slf4j
	implementation 'org.slf4j:slf4j-api:2.0.7'

	implementation 'com.google.guava:guava:33.0.0-jre'

	implementation 'com.google.code.gson:gson'

	// email
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//firebase
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	//S3
	implementation group: 'io.awspring.cloud', name: 'spring-cloud-starter-aws', version: '2.4.4'
	implementation group: 'io.awspring.cloud', name: 'spring-cloud-starter-aws-secrets-manager-config', version: '2.4.4'

	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0' // JUnit 5
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0' // JUnit 5 실행 엔진
}

jar {
	enabled = false
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaExec) {
	classpath = sourceSets.main.runtimeClasspath
}